:toc: preamble
:project-url: https://github.com/sorairolake/scryptenc-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.8.2\...v0.8.3[0.8.3] - 2023-09-29

=== Removed

* Remove `Params::default` ({pull-request-url}/76[#76])

== {compare-url}/v0.8.1\...v0.8.2[0.8.2] - 2023-09-20 [YANKED]

=== Added

* Add constants to represent header and tag sizes ({pull-request-url}/72[#72])

=== Changed

* Change the structure of `Params` ({pull-request-url}/70[#70])

== {compare-url}/v0.8.0\...v0.8.1[0.8.1] - 2023-09-07

=== Changed

* Bump `clap` from 3 to 4 ({pull-request-url}/62[#62])
* Bump `actions/checkout` from 3 to 4 ({pull-request-url}/63[#63])

== {compare-url}/v0.7.1\...v0.8.0[0.8.0] - 2023-09-03

=== Added

* Add a specialized `Result` type for read and write operations for the scrypt
  encrypted data format ({pull-request-url}/56[#56])
* Add convenience functions for using `Encryptor` and `Decryptor`
  ({pull-request-url}/57[#57])

=== Changed

* Re-export `hmac` crate ({pull-request-url}/51[#51])
* Change to store the plaintext and the ciphertext as `slice` in `Encryptor`
  and `Decryptor` ({pull-request-url}/54[#54])
* Make `alloc` optional and add `alloc` feature for enables functionality
  requiring an allocator ({pull-request-url}/55[#55])

== {compare-url}/v0.7.0\...v0.7.1[0.7.1] - 2023-08-18

=== Changed

* Change `SPDX-FileCopyrightText` of each file to include only the year of
  initial publication ({pull-request-url}/45[#45])
* Remove unnecessary newline after period ({pull-request-url}/46[#46])

== {compare-url}/v0.6.0\...v0.7.0[0.7.0] - 2023-08-11

=== Changed

* Split `Params` from `format.rs` ({pull-request-url}/38[#38])