@@ -53,6 +53,10 @@ jobs:
         run: cargo test --target ${{ matrix.target }} --no-default-features
       - name: Run tests (`alloc` feature)
         run: cargo test --target ${{ matrix.target }} --no-default-features --features alloc
+      - name: Run tests (`serde` feature)
+        run: cargo test --target ${{ matrix.target }} --features serde
+      - name: Run tests (`serde` feature with no default features)
+        run: cargo test --target ${{ matrix.target }} --no-default-features --features serde
 
   rustfmt:
     name: Rustfmt
