@@ -35,17 +35,21 @@ ctr = "0.9.2"
 hmac = "0.12.1"
 rand = { version = "0.8.5", default-features = false, features = ["getrandom", "std_rng"] }
 scrypt = { version = "0.11.0", default-features = false }
+serde = { version = "1.0.190", default-features = false, features = ["derive"], optional = true }
 sha2 = { version = "0.10.8", default-features = false }
 
 [dev-dependencies]
 anyhow = "1.0.75"
 clap = { version = "4.0.26", features = ["derive"] }
 dialoguer = { version = "0.10.4", default-features = false, features = ["password"] }
+serde_json = "1.0.108"
+serde_test = "1.0.176"
 
 [features]
 default = ["std"]
 alloc = []
 std = ["alloc", "hmac/std"]
+serde = ["dep:serde"]
 
 [package.metadata.docs.rs]
 all-features = true
