@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.8.3\...HEAD[Unreleased]
+
+=== Added
+
+* Add serialization support for `Params` ({pull-request-url}/85[#85])
+
 == {compare-url}/v0.8.2\...v0.8.3[0.8.3] - 2023-09-29
 
 === Removed
